# ChangeLog for net-misc/elianna-pack
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/elianna-pack/Attic/ChangeLog,v 1.2 2006/09/21 18:35:51 gustavoz Exp $

  21 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> +metadata.xml:
  How about some metadata? Silly me

*elianna-pack-1.0 (21 Sep 2006)

  21 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  +elianna-pack-1.0.ebuild:
  Initial import of es_AR asterisk voice prompts
