@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST elianna-pack_v1.0.tar.gz 1397537 RMD160 7f2ff96987ef9909649c28c8eacd90e5bbe203c5 SHA1 fc66416223194f2e73960d9e43406165e6a236aa SHA256 1c879453c01ce88afa314cbb8afcaca0dbf1fd04d9a787137e9c7746109ca00c
-EBUILD elianna-pack-1.0.ebuild 1081 RMD160 774dff34cc73bb524c22c6b61408cddb4399063b SHA1 4a8175335b2f6fd62c2efda42483076d82b4908f SHA256 9d6d6275527cc6717a25f0b7b8fdd858b6985e3c6e6a478c00bfc3395eeaf4b0
-MD5 48ee60c25d5015bbe579bfeb7345701b elianna-pack-1.0.ebuild 1081
-RMD160 774dff34cc73bb524c22c6b61408cddb4399063b elianna-pack-1.0.ebuild 1081
-SHA256 9d6d6275527cc6717a25f0b7b8fdd858b6985e3c6e6a478c00bfc3395eeaf4b0 elianna-pack-1.0.ebuild 1081
-MISC ChangeLog 488 RMD160 ecfa61e825d5b7efc77d773010c4775338be3904 SHA1 23f6ab07bc7bb9d59559de6e04cb494b7918cfa8 SHA256 b05da9de4789a79cbeb0c686ba4daa5fac4686caf0f5ecb99607bd869305b7ab
-MD5 3f649e2e13fa6f41bdd7c4ffb8f93dbd ChangeLog 488
-RMD160 ecfa61e825d5b7efc77d773010c4775338be3904 ChangeLog 488
-SHA256 b05da9de4789a79cbeb0c686ba4daa5fac4686caf0f5ecb99607bd869305b7ab ChangeLog 488
+EBUILD elianna-pack-1.0.ebuild 1095 RMD160 15cc9c827cbd6f98f19f741153229e232ffa3c2e SHA1 45fa3cc0d4cdbb64dd5d1d9631051f42895f29fb SHA256 8b897846428f7546f695e0f053fce6236bfd864fbde05bdeeb1dc0f5339c979b
+MD5 7294a2a1cfafe5e6f72ea930d7037e79 elianna-pack-1.0.ebuild 1095
+RMD160 15cc9c827cbd6f98f19f741153229e232ffa3c2e elianna-pack-1.0.ebuild 1095
+SHA256 8b897846428f7546f695e0f053fce6236bfd864fbde05bdeeb1dc0f5339c979b elianna-pack-1.0.ebuild 1095
+MISC ChangeLog 595 RMD160 d5cd3f68581d18785bae20a69b56c3a75e718cb8 SHA1 465f6d70c5ee368c3449b7ba4fa768475d1fce70 SHA256 d3d9c026c0e16913bcc2972888ac4474cb5bcbc282754f78052463fcca8535b1
+MD5 f12fe95d81c5a2fc9e5d2b713e8468d4 ChangeLog 595
+RMD160 d5cd3f68581d18785bae20a69b56c3a75e718cb8 ChangeLog 595
+SHA256 d3d9c026c0e16913bcc2972888ac4474cb5bcbc282754f78052463fcca8535b1 ChangeLog 595
 MISC metadata.xml 253 RMD160 570fb8f669c15a2d64122cb0fd3f998a6d8c86e2 SHA1 e007de4dd11b5300b4ef48e16b552cfbe18e92c7 SHA256 350c7e6508d1ebbbbbc3e882e8d8d6a15a77a2861611c8df721b55d5b2532494
 MD5 d620cd424e6c6553736cc5304899deae metadata.xml 253
 RMD160 570fb8f669c15a2d64122cb0fd3f998a6d8c86e2 metadata.xml 253
@@ -20,7 +20,7 @@ SHA256 5feb29e7cdaa39eee362a31d8293b476c30dedf01796afdbce7b0da6fdda4f63 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.5-ecc0.1.6 (GNU/Linux)
 
-iD8DBQFFEtuTKRy60XGEcJIRAsTZAJ9DMkc6o0vX//hfNrRmfJMKxg15VwCfZr2X
-DaH2ieWX/OKdeXyeCqcxFVo=
-=rPFb
+iD8DBQFFR6AgKRy60XGEcJIRAg4WAJsF4RAyJtLHDcrUCLhCbwOP78oHOgCgsFew
+V6Vuff0XP0g+FxCtctAS7ps=
+=uQQ/
 -----END PGP SIGNATURE-----
